# lab-11-process

./: .travis.yml  CMakeLists.txt
include/: Builder.hpp  Process.hpp
sources/: Builder.cpp  Process.cpp  source.cpp
